--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ navbar-links:
   Resources:
     - Ben Jordan's Blog: "http://thegoldenmule.com/blog/"
     - RJ Lorimer's Blog: "http://realjenius.com/"
+    - Tyler Ohlson's Blog: "https://medium.com/@tyloh"
   About Me: "aboutme"
 
 # Image to show in the navigation bar - image must be a square (width = height)
