--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: Keeping up with the fast paced world of software design, planning, 
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
 # url is the the website domain URL without a trailing slash
-url: "https://www.bolt-software.com"
+url: "https://bolt-software.com"
 
 # baseurl should be an empty string
 #baseurl: ""
