--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ share-links-active:
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-144544280-1"
 
 # Google Tag Manager ID
 #gtm: ""
@@ -259,6 +259,3 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-redirect-from
-
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
