--- a/_config.yml
+++ b/_config.yml
@@ -36,19 +36,7 @@ navbar-links:
 
 # --- Background colour/image options --- #
 
-# Personalize the colors in your website. Colour values can be any valid CSS colour
-
-#navbar-col: "#F5F5F5"
-# navbar-text-col: "#404040"
-# navbar-children-col: "#F5F5F5"
-# page-col: "#FFFFFF"
-# link-col: "#008AFF"
-# hover-col: "#0085A1"
-# footer-col: "#F5F5F5"
-# footer-text-col: "#777777"
-# footer-link-col: "#404040"
-
-navbar-col: "#4cb8e6"
+navbar-col: "#505050"
 navbar-text-col: "#F5F5F5"
 navbar-children-col: "#505050"
 page-col: "#FFFFFF"
